# wikify

./: .coverage  .env.example  .gitignore  .mcp.json  .mcp.json.example  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  scholarforge.code-workspace
.claude/: all_prompts.json  settings.local.json  temp_Long_Term_Potentiation_prompt.txt  temp_Memristor_prompt.txt  temp_Metal_Insulator_Metal_Structure_prompt.txt  temp_Metal_Oxide_prompt.txt  temp_Multilevel_Switching_prompt.txt  temp_Neural_Network_prompt.txt  temp_Neuromorphic_Computation_prompt.txt
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/: generate-hierarchical-broad.md  generate-hierarchical-gap-first.md  generate-hierarchical-hybrid.md  generate-hierarchical.md  generate.md  ingest.md  wiki-ask.md  wiki-campaign.md  wiki-epoch.md  wiki-maintain.md
.claude/workflows/: wikify-public-readiness.js
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
.public-readiness/: audit-commits.md  audit-docs.md  audit-meta.md  audit-secrets.md  audit-skills.md  audit-tests.md  inventory-deadcode.md  known-findings.md  reorg-plan.md  research-oss.md  research-plugin.md  research-skills.md
archive/claude_skills/: generate-hierarchical-broad.md  generate.md  ingest.md
archive/docs/: project-status.md
archive/scripts/: benchmark_s5.py  benchmark_s5_no_inject.py  drain_extract.py  drain_heuristic.py  spotcheck_phase2.py
archive/tests/: conftest.py
archive/wikify/: __init__.py
benchmarks/: assemble_haiku_results.py  concept_extraction_benchmark.py  profile_epoch.py  write_epoch_articles.py
benchmarks/results/: _article_evidence.json  _epoch_chunks.json  benchmark_chunks.json  epoch_profile.json  haiku_results.json  phi3.5_report.json  phi3.5_results.json  profile_stdout.txt
docs/: README.md  architecture.md  citation-resolution-demo.md  cli-sampling-and-fetch.md  databases.md  distill-test-readiness.md  filesystem-state-design.md  harness_insights.md  ingest-refactor-plan.md  ingestion-and-parsing.md  knowledge-graph-design.md  llm-inventory.md  llm-wiki-comparison.md  metrics.md  neurips-workplan.md  overview.md  parser-evaluation.md  project-status.md  refactor-plan.md  references.md  runbook.md  skill-centric-execution-plan.md  skill-centric-implementation-plan.md  skill-centric-pivot.md  skill-pivot-completion-plan.md  skill-pivot-phase-0-plan.md  skills-restructure-proposal.md  strategies.md  streaming-ingest-plan.md  study-design-phase2.md  study-design.md  test-run-playbook.md  vector-search.md  wiki-rendering.md
docs/archive/: README.md
docs/design/: adaptive-knowledge-engine.md  agent-orchestration.md  coding-standards.md  domain-membrane-model.md  editor-writer-architecture.md  kb-generalization.md  research-loop-insights.md  wiki-implementation-plan.md  wiki-recipe-reference.md  wiki-rich-media-people-layout.md  wiki-runtime-refactor-plan.md  wiki-wikipedia-model.md  workflow-config-redesign.md
docs/logic/: 01-ingestion-pipeline.md  02-metadata-extraction.md  03-chunking.md  04-topic-extraction.md  06-bibliographic-coupling.md  07-embeddings-similarity.md  08-graph-metrics.md  11-vault-generation.md  15-document-types.md  16-chunk-embedding-tradeoffs.md  academic_writing_style.md  llm-layer-design.md
docs/plans/: structural-improvements.md
docs/prompts/: implement-discovery-engine-alignment.md
docs/refactor/: activity-log.md  wiki-deep-refactor-plan.md
evals/: README.md  lit_review_ald_memristors.md
scripts/: audit_formula_leak.py  bench_embed_speed.py  benchmark_embedder.py  benchmark_s5.py  benchmark_s5_no_inject.py  bib_delta.py  check_no_vendor_imports.py  compare_chunks.py  create_pptx_template.py  create_templates.py  drain_heuristic.py  effq_bench.py  functional_sweep.py  generate_review.py  generate_slides.py  probe_marker_vs_docling.py  profile_corpus_cli.py  profile_docling_stages.py  profile_run.py  reassemble_metadata.py  scan_bib_quality.py  slice6_metrics.py  test_mcp_agent.py  validate_ingest.py  verify_extract_response.py
src/scholarforge/: __init__.py  cli.py  config.py  mcp_server.py
src/wikify/: __init__.py  api.py  cli.py  cli_io.py  config.py  context.py  dispatch.py  embedding.py  grounding.py  mcp_server.py  meter.py  models.py  paths.py  schema.py  session.py  strategies.md  test-run-playbook.md  types.py
src/wikify_simple/: HANDOFF.md  ITERATION_DESIGN.md  README.md  RENDERER_PLAN.md  RUNBOOK_real_binding.md  SESSION_LOG.md  __init__.py  architecture.md  cli.py  config.py  dispatch.py  embedding.py  ingest_audit.md  metrics.md  models.py  open_questions.md  paths.py  runbook.md  slice6_findings.md  strategies.md  test-run-playbook.md  types.py
tasks/: chunk_hygiene_plan.md  citation-and-chunk-edges-followup.md  citation_link_diagnostic.md  cli_audit.md  dossier_noise_audit_2026_05_16.md  finish-skill-centric-redesign-single-session.md  granite_docling_formula_leak.md  investigate-efficiency-ledger.md  investigate-measured-savings.md  investigate-profiling-friction.md  lessons.md  mcp_autoresearch_audit.md  mcp_plan.md  parser_probe.md  phase_b_vetting_skill_2026_05_17.md  probe_docling_default.json  probe_docling_default_n20.json  probe_docling_tuned.json  probe_marker.json  probe_marker_n20.json  serve_design.md  similarity-walk-spec.md  skill-centric-redesign-plan.md  sqlite-query-store-deviations.md  sqlite-query-store-plan.md  todo.md  uv_run_pyc_race_2026_05_16.md  wikify-data-artifacts.md  wikify-investigate-friction.md  wikify-search-wiki-readiness.md  wikify_baseline_friction_audit_2026_05_25.md  wikipage-end-to-end-plan.md  writer_call_telemetry_2026_05_16.md
tests/: conftest.py  mock_generation_test.py
tests/test_agent/: test_core.py  test_ingest_tool.py  test_paper_lookup.py  test_revision.py  test_run_context.py  test_session_state.py  test_tool_schema.py  test_writer_input.py
tests/test_evaluate/: test_pi_review.py  test_quality.py
tests/test_export/: test_chemistry.py  test_templates.py
(+3939 files in other folders)
