[project]
name = "wikify"
version = "0.1.0"
description = "Corpus-driven Wikipedia builder: ingest any knowledge source, extract concepts, build a self-improving personal wiki"
readme = "README.md"
authors = [
    { name = "Fabio Grillo", email = "fabio.grillo89@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    # PDF / document parsing
    "pymupdf>=1.24",
    "pymupdf4llm>=0.0.10",
    "python-docx>=1.1",
    "python-pptx>=0.6.23",
    # Data layer
    "sqlmodel>=0.0.22",
    "chromadb>=0.5",
    # numerical / graph computation
    "scipy>=1.13", # used by networkx.pagerank inside ingest/pipeline.py
    # LLM interface
    "litellm>=1.40",
    "tiktoken>=0.7",
    "diskcache>=5.6",
    # Reference management
    "pyzotero>=1.5",
    "bibtexparser>=1.4",
    # Visualization
    "matplotlib>=3.9",
    "plotly>=5.22",
    # Templating and export
    "jinja2>=3.1",
    # CLI and config
    "typer>=0.12",
    "pydantic-settings>=2.3",
    "rich>=13.7",
    "rapidocr-onnxruntime>=1.4.4",
    "mcp[cli]>=1.26.0",
    "markdown>=3.10.2",
    "xhtml2pdf>=0.2.17",
    "cloudscraper>=1.2.71",
    "playwright>=1.58.0",
    "scrapling[all]>=0.4.2",
    "docx2pdf>=0.1.8",
    "pywin32>=311",
    "trafilatura>=2.0.0",
    "python-frontmatter>=1.1.0",
    "networkx>=3.6.1",
    "fastapi>=0.135.3",
    "uvicorn>=0.42.0",
    "pymdown-extensions>=10.21.2",
    "pyyaml>=6.0.3",
    "fastembed>=0.7.3",
    "torch>=2.6.0,<2.7",
    "torchvision>=0.21.0,<0.22",
    "docling>=2.86.0",
    "opencv-python-headless>=4.13.0.92",
    "onnxruntime-directml>=1.24.4",
    "hf-xet>=1.4.2",
    "aiosqlite>=0.22.1",
    "aiolimiter>=1.2.1",
    "rapidfuzz>=3.14.5",
]

[project.optional-dependencies]
gdrive = ["google-api-python-client>=2.130", "google-auth-oauthlib>=1.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Project name is "wikify" but the actual package on disk is
# ``src/wikify``. Tell hatchling where to find it so the
# editable install (and any future wheel) ships the right module.
packages = ["src/wikify"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
# metrics.py uses math-style uppercase variables (W, M, L, Q) intentionally.
"src/wikify/eval/metrics.py" = ["N803", "N806"]
"src/wikify/eval/audit.py" = ["N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.uv]
index-url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124" },
]
torchvision = [
    { index = "pytorch-cu124" },
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0",
    "ruff>=0.15.8",
]
