[project]
name = "wikify"
version = "0.1.0"
description = "Corpus-driven Wikipedia builder: ingest any knowledge source, extract concepts, build a self-improving personal wiki"
readme = "README.md"
authors = [
    { name = "Fabio Grillo", email = "fabio.grillo89@gmail.com" }
]
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    # Document parsing
    "pymupdf>=1.24",
    "pymupdf4llm>=0.0.10",
    "python-docx>=1.1",
    "python-pptx>=0.6.23",
    "trafilatura>=2.1.0",
    "docling>=2.107.0",
    "marker-pdf>=1.6",
    # Embeddings / ML stack
    "fastembed>=0.7.3",
    "onnxruntime>=1.27.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.48,<4.52",
    "opencv-python-headless>=4.13.0.92,<4.14",
    "hf-xet>=1.5.1",
    # Numerical / graph
    "scipy>=1.18.0",  # pulled in by networkx.pagerank inside ingest/pipeline.py
    "networkx>=3.6.1",
    # Reference resolution
    "bibtexparser>=1.4",
    "httpx>=0.28",
    "aiolimiter>=1.2.1",
    "rapidfuzz>=3.14.5",
    # Data layer
    "aiosqlite>=0.22.1",
    # Templating and rendering
    "jinja2>=3.1",
    "markdown>=3.10.2",
    "pymdown-extensions>=10.21.2",
    # CLI / config / protocol
    "typer>=0.12",
    "pyyaml>=6.0.3",
    "mcp>=1.28.1",
]

[project.optional-dependencies]
gdrive = ["google-api-python-client>=2.198.0", "google-auth-oauthlib>=1.4.0"]

[project.scripts]
wikify = "wikify.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Project name is "wikify" but the actual package on disk is
# ``src/wikify``. Tell hatchling where to find it so the
# editable install (and any future wheel) ships the right module.
packages = ["src/wikify"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
# metrics.py uses math-style uppercase variables (W, M, L, Q) intentionally.
"src/wikify/eval/metrics.py" = ["N803", "N806"]
# KG tests use NetworkX `G` convention and long fixture strings.
"tests/wikify/citestore/test_graph.py" = ["E501", "N806"]
# Wiki-graph tests have long fixture body_markdown strings.
"tests/wikify/store/test_wiki_graph.py" = ["E501"]
# Scale / sampling / policy tests all construct an nx.MultiDiGraph named G.
"tests/wikify/test_image_sampling.py" = ["N806"]
"tests/wikify/test_policy_and_coverage_gap.py" = ["N806"]
"tests/wikify/test_scale_regression.py" = ["N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["wikify"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.uv]
index-url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

# CUDA wheels exist only for Linux + Windows; macOS falls back to the
# default PyPI index (CPU / MPS build) because the marker excludes darwin.
[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "nbconvert>=7.17.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0",
    "ruff>=0.15.8",
]
